refactor : 무브 검증로직 리팩토링